MODEXPW-608 Init commit